# nsus

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  LICENSE  README.md  mkdocs.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
docs/: contributing.md  example.ipynb  index.md  installation.md
scripts/: gen_ref_nav.py
src/nsus/: __init__.py
tests/: __init__.py  test_main.py
