[build-system]
requires = ["setuptools>=40.8.0", "wheel", "build>=1.2.2"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.org/simple"


[project]
name = "nsus"
authors = [
  { name = "Naman Priyadarshi", email = "namanpriyadarshicr7@gmail.com" },
]
description = "A python library for NSIS windows installer analysis"
readme = "README.md"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",]

version = "0.1.0"
requires-python = ">=3.9,<4"
dependencies = [
  # note: add your dependencies here
]


# NOTE: it is not actually optional, instead it is development dependencies
[project.optional-dependencies]
dev = [
  "build >= 1.2.2",
  "pytest >= 7.3.2",
  "pytest-cov >= 4.1.0",
  "coverage >= 7.2.7",
  "pre-commit >= 3.3.2",
  "ruff >= 0.2.0",
  "ipython < 8",
  "ipykernel >=6.0.0",
  "Jinja2 >= 3.1.2",
  "mkdocs >= 1.4.3",
  "mkdocs-exclude >= 1.0.2",
  "mkdocs-jupyter >= 0.24.1",
  "mkdocs-literate-nav >= 0.6.0",
  "mkdocs-macros-plugin >= 0.7.0, < 1",
  "mkdocstrings >= 0.21.2",
  "mkdocstrings-python >= 1.1.2",
  "mkdocs-gen-files >=0.5.0",
  # 'PosixPath' object has no attribute 'endswith'
  "virtualenv<=20.25.1",
]

[project.urls]
Homepage = "https://nsus.com"
"Bug Tracker" = "https://nsus.com/issues"
Discussions = "https://nsus.com/discussions"
Changelog = "https://nsus.com/releases"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 79
force-exclude = true
src = ["./"]
exclude = [
  'docs',
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "RUF", # Ruff-specific rules
  "I001",  # isort
]
fixable = ["I001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"
